// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseCard > renders Featured as expected 1`] = `
<div>
  <div
    class="course-card--featured container-lined px-8 pb-4 max-w-[646px]"
  >
    <p
      class="course-card__featured-label uppercase font-semibold"
    >
      Featured course
    </p>
    <img
      alt="Course Card Placeholder"
      class="course-card__image w-full h-[165px] object-cover rounded-lg"
    />
    <h3
      class="course-card__title text-bluedot-normal text-[24px] mb-4 font-serif font-extrabold leading-none"
    >
      Title
    </h3>
    <p
      class="course-card__description text-bluedot-darker text-md mb-4 line-clamp-6"
    >
      Description
    </p>
    <div
      class="course-card__metadata flex justify-between items-center"
    >
      <p
        class="course-card__metadata-item text-left text-xs"
      >
        5 days
      </p>
      <span
        class="tag inline-flex items-center px-4 py-1.5 rounded-lg text-xs font-semibold border border-bluedot-light course-card__application-deadline"
        role="status"
      >
        Apply now
      </span>
    </div>
  </div>
</div>
`;

exports[`CourseCard > renders default as expected 1`] = `
<div>
  <div
    class="course-card container-lined px-6 pb-6 max-w-[323px]"
  >
    <img
      alt="Course Card Placeholder"
      class="course-card__image w-full h-[165px] object-cover rounded-xl mt-6 mb-12"
    />
    <h3
      class="course-card__title text-bluedot-normal text-[24px] mb-4 font-serif font-extrabold leading-none"
    >
      Title
    </h3>
    <p
      class="course-card__description text-bluedot-darker text-md mb-4 line-clamp-4"
    >
      Description
    </p>
    <div
      class="course-card__metadata flex justify-between items-center"
    >
      <p
        class="course-card__metadata-item text-left text-xs"
      >
        5 days
      </p>
      <span
        class="tag inline-flex items-center px-4 py-1.5 rounded-lg text-xs font-semibold border border-bluedot-light course-card__application-deadline"
        role="status"
      >
        Apply now
      </span>
    </div>
  </div>
</div>
`;

exports[`CourseCard > renders with optional args 1`] = `
<span
  class="tag inline-flex items-center px-4 py-1.5 rounded-lg text-xs font-semibold border border-bluedot-light course-card__application-deadline"
  role="status"
>
  Apply by Feb 1
</span>
`;

exports[`CourseCard > renders with optional args 2`] = `
<p
  class="course-card__metadata-item text-left text-xs"
>
  12 weeks
</p>
`;

exports[`CourseCard > renders with optional args 3`] = `
<img
  alt="Course Card Placeholder"
  class="course-card__image w-full h-[165px] object-cover rounded-xl mt-6 mb-12"
  src="/images/team/custom-size.jpg"
/>
`;
